[gd_scene load_steps=4 format=3 uid="uid://votsouooyknd"]

[ext_resource type="Texture2D" uid="uid://bicdveuejq1fv" path="res://resources/buttons/next.png" id="1_vys4y"]
[ext_resource type="Script" path="res://src/report/interval_picker.gd" id="1_wb68v"]
[ext_resource type="Texture2D" uid="uid://cd6gqqp4yin8d" path="res://resources/buttons/next_hover.png" id="2_powr4"]

[node name="IntervalPicker" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_right = 66.0
offset_bottom = 32.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1
script = ExtResource("1_wb68v")

[node name="PreviousContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="PreviousMonth" type="TextureButton" parent="PreviousContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1_vys4y")
texture_hover = ExtResource("2_powr4")
ignore_texture_size = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MonthLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "January"
horizontal_alignment = 1

[node name="YearLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "2024"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(177, 0)
layout_mode = 2
size_flags_horizontal = 4
select_mode = 1
allow_reselect = true
allow_search = false
auto_height = true
item_count = 8
max_columns = 7
same_column_width = true
fixed_column_width = 19
item_0/text = "10"
item_1/text = "2"
item_2/text = "3"
item_3/text = "4"
item_4/text = "5"
item_5/text = "6"
item_6/text = "7"
item_7/text = "8"

[node name="SelectedIntervalContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectedStartLabel" type="Label" parent="VBoxContainer/SelectedIntervalContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="Hyphen" type="Label" parent="VBoxContainer/SelectedIntervalContainer"]
layout_mode = 2
text = "-"
clip_text = true

[node name="SelectedEndLabel" type="Label" parent="VBoxContainer/SelectedIntervalContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
clip_text = true

[node name="NextContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="NextMonth" type="TextureButton" parent="NextContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1_vys4y")
texture_hover = ExtResource("2_powr4")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[connection signal="pressed" from="PreviousContainer/PreviousMonth" to="." method="_on_previous_month_pressed"]
[connection signal="item_clicked" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="NextContainer/NextMonth" to="." method="_on_next_month_pressed"]
